[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/yellowfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/slkscr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Games/TheFallen/FallenFinished.gd" type="Script" id=3]
[ext_resource path="res://Games/TheFallen/FallenIcon.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 270, 480 )

[sub_resource type="DynamicFont" id=2]
size = 47
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "lose"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("title:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "Y", "Yo", "You", "You l", "You lo", "You los", "You lose" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("title:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.501961, 0.52549, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 352.198 ), Vector2( 0, 352.198 ), Vector2( 0, 41.198 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("info:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CurrentRole:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OgRole:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("title:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CurrentRole:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "reveal"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("CurrentRole:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("info:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("info:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "this was your
final role" ]
}

[sub_resource type="Animation" id=6]
resource_name = "swap"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("info:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "this was your
final role", "this was your
fina role", "this was your
fin role", "this was your
fi role", "this was your
f role", "this was your
 role", "this was your
s role", "this was your
st role", "this was your
sta role", "this was your
star role", "this was your
start role", "this was your
starti role", "this was your
startin role", "this was your
starting role" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OgRole:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CurrentRole:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CurrentRole:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OgRole:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("title:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "Y", "Yo", "You", "You W", "You Wi", "You Win", "You Win!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("title:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.701961, 0.898039, 0.623529, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 352.198 ), Vector2( 0, 352.198 ), Vector2( 0, 41.198 ) ]
}

[node name="root" type="Node"]
script = ExtResource( 3 )

[node name="info" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 83.3071
margin_top = 745.49
margin_right = 463.307
margin_bottom = 910.49
custom_fonts/font = ExtResource( 1 )
text = "this was your
starting role"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screenpressed" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
shape_visible = false

[node name="CurrentRole" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 275, 471.755 )
animation = "spy"

[node name="OgRole" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 275, 474 )
animation = "chmo"

[node name="title" type="Label" parent="."]
margin_top = 352.198
margin_right = 540.0
margin_bottom = 516.198
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.501961, 0.52549, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lose = SubResource( 3 )
anims/reset = SubResource( 4 )
anims/reveal = SubResource( 5 )
anims/swap = SubResource( 6 )
anims/win = SubResource( 7 )
[connection signal="pressed" from="screenpressed" to="." method="_on_screenpressed_pressed"]
